add customer update route
